# crewAI_docs_cn

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
core-concepts/Agents/: index.html
core-concepts/Collaboration/: index.html
core-concepts/Crews/: index.html
core-concepts/Memory/: index.html
core-concepts/Planning/: index.html
core-concepts/Processes/: index.html
core-concepts/Tasks/: index.html
core-concepts/Testing/: index.html
core-concepts/Tools/: index.html
core-concepts/Training-Crew/: index.html
core-concepts/Using-LangChain-Tools/: index.html
core-concepts/Using-LlamaIndex-Tools/: index.html
docs/: index.md
docs/core-concepts/: Agents.md  Collaboration.md  Crews.md  Memory.md  Planning.md  Processes.md  Tasks.md  Testing.md  Tools.md  Training-Crew.md  Using-LangChain-Tools.md  Using-LlamaIndex-Tools.md
docs/getting-started/: Installing-CrewAI.md  Start-a-New-CrewAI-Project-Template-Method.md
docs/how-to/: AgentOps-Observability.md  Coding-Agents.md  Conditional-Tasks.md  Create-Custom-Tools.md  Customize-Prompts.md  Customizing-Agents.md  Force-Tool-Ouput-as-Result.md  Hierarchical.md  Human-Input-on-Execution.md  Kickoff-async.md  Kickoff-for-each.md  LLM-Connections.md  Langtrace-Observability.md  Replay-tasks-from-latest-Crew-Kickoff.md  Sequential.md  Your-Own-Manager-Agent.md
docs/telemetry/: Telemetry.md
docs/tools/: BrowserbaseLoadTool.md  CSVSearchTool.md  CodeDocsSearchTool.md  CodeInterpreterTool.md  ComposioTool.md  DOCXSearchTool.md  EXASearchTool.md  (+16 more)
search/: search_index.json
(+42 files in other folders)
